# IPA_Project

./: .codedocs  CMakeLists.txt  Doxyfile  LICENSE.txt  License.txt  README.md  k_mean.cpp  k_mean.h  template_extraction.cpp  template_extraction.h  utils.cpp  utils.h
aircraft_detection_project/: functions.cpp  functions.h  main.cpp
cmake/: CheckCXX17Features.cmake
doc/: TODO.txt  doxygen_crawl.html  files.html  globals.html  globals_func.html
doc/d2/d78/: hog__features__extraction_8h.html
doc/d3/dfb/: kmeans_8cpp.html
doc/d4/d71/: pipeline_8cpp.html
doc/d5/d60/: utils_8h_source.html
doc/da/d36/: straight__airplanes__extraction_8h_source.html
doc/dd/d64/: template__matching_8h.html
doc/dd/d84/: kmeans_8h_source.html
doc/project_proposal/: frontespizio.tex  main.tex
doc/search/: all_13.js  files_5.js  files_6.js  functions_2.js  functions_d.js  searchdata.js
docs/: OpenCV-installation-guide.txt  README.txt  dir_68267d1309a1af8e8297ef4c3efbcdba.html  globals_vars.html  index.html  menudata.js
docs/d1/d31/: svm__training_8h.html  svm__training_8h_source.html
docs/d1/d9b/: python__script_8h.html  python__script_8h_source.html
docs/d2/d78/: hog__features__extraction_8h_source.html
docs/d5/d60/: utils_8h.html
docs/d9/d9b/: python__script_8cpp.html
docs/da/d36/: straight__airplanes__extraction_8h.html
docs/dd/d1a/: template__matching_8cpp.html
docs/dd/d64/: template__matching_8h_source.html
docs/dd/d84/: kmeans_8h.html
docs/de/d58/: hog__features__extraction_8cpp.html
docs/df/d7a/: pipeline_8h.html  pipeline_8h_source.html
docs/search/: all_10.js  all_4.js  all_6.js  all_9.js  all_d.js  all_e.js  files_0.js  files_1.js  files_2.js  files_4.js  functions_0.js  functions_1.js  functions_11.js  functions_4.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_f.js  typedefs_0.js  variables_0.js  variables_1.js
doxygen_docs/: dir_33b76457f0038000fc96ba03fce6c0bf.html  globals_type.html
doxygen_docs/d5/d5e/: eigenplanes_8cpp.html
doxygen_docs/d5/dc2/: svm__training_8cpp.html
doxygen_docs/d7/dcf/: straight__airplanes__extraction_8cpp.html
doxygen_docs/db/dd9/: eigenplanes_8h.html  eigenplanes_8h_source.html
doxygen_docs/de/d06/: utils_8cpp.html
doxygen_docs/df/d0a/: main_8cpp.html
doxygen_docs/search/: all_11.js  all_3.js  all_5.js  all_7.js  all_b.js  all_c.js  all_f.js  functions_10.js  functions_7.js
src/: CMakeLists.txt  requirements.txt  roi_label_pairs.csv
src/aircraft_detection_project/: CMakeLists.txt  detection.cpp  detection.h  eigenPlanes.cpp  eigenPlanes.h  eigenplanes.cpp  eigenplanes.h  featureExtraction.cpp  featureExtraction.h  hog_features_extraction.cpp  hog_features_extraction.h  k_mean.cpp  kmeans.cpp  kmeans.h  main.cpp  pipeline.cpp  pipeline.h  python_script.cpp  python_script.h  straight_airplanes_extraction.cpp  straight_airplanes_extraction.h  svm_inference_input.cpp  svm_inference_input.h  svm_training.cpp  svm_training.h  template_extraction.cpp  template_extraction.h  template_matching.cpp  template_matching.h  utils.cpp  utils.h
src/dataset/: 10_DT5.txt  11_DT5.txt  171_DT2.txt  173_DT8.txt  1_DT4.txt  206_DT2.txt  226_DT8.txt  24_DT5.txt  376_DT8.txt  488_DT8.txt  AMST_065.txt  DAV_008.txt  DAV_027.txt  DAV_033.txt  DEN_0013.txt  GBG0_411.txt  GBG_053.txt  GBG_254.txt  GBG_255.txt  GBG_260.txt  GBG_355.txt  GBG_370.txt  GBG_413.txt  GBG_434.txt  GBG_565.txt  GBG_577.txt  GBG_617.txt  GBG_620.txt  GBG_659.txt  GBG_705.txt  GBG_953.txt  GBG_962.txt  GBG_964.txt  GBG_982.txt  GBG_987.txt  HON_0106.txt  IND_0177.txt  JOH_0110.txt  LAS_0060.txt  LAS_0085.txt  (+10 more)
src/dataset_for_straight_airplanes_extraction/: README.md
src/dataset_testing/: README.md  VIC_009.txt
src/dataset_training/: README.md
src/straight_airplanes/: README.md
src/svm_cv_outputs/: README.md
svm/: README.md
ucasML_package/: README.md
ucasML_package/opencv_libs/: README.md
